refactor(stock): add DTO layer and validation
- Added CreateStockRequest and UpdateStockRequest records
- Introduced StockResponse to avoid entity exposure
- Refactored controller/service to use DTO mapping
- Added transactional boundary to StockService
- Integrated Lombok for entity boilerplate reduction